--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/anthony.each/viz/Tableaupart1_16737242341700/Dashboard1?publish=yes" class="image fit"><img src="images/Tableau-Logo.png" alt="" /></a>
-									<p>Utilizing Tableau Dashboards to analyze COVID-19 data and offer a comprehensive view of the pandemic's impact.</p>
+									<p>Using Tableau Dashboards to examine COVID-19 data and offer a comprehensive view of the pandemic's impact.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/anthony.each/viz/Tableaupart1_16737242341700/Dashboard1?publish=yes" class="button">View Project</a></li>
 									</ul>
