--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
 									<article>
 										<header>
 											<span class="date"></span>
-											<h2><a href="https://onedrive.live.com/edit.aspx?resid=6D4FC44CD6D7D8E9!66165&ithint=file%2cxlsx&ct=1676604607493&wdOrigin=OFFICECOM-WEB.START.EDGEWORTH
+											<h2><a href="https://github.com/AnthonySNE/Bike-Sales-in-Excel
 
 												"> Bike Sales in Excel<br />
 											</h2>
 										</header>
-										<a href="https://onedrive.live.com/edit.aspx?resid=6D4FC44CD6D7D8E9!66165&ithint=file%2cxlsx&ct=1676604607493&wdOrigin=OFFICECOM-WEB.START.EDGEWORTH
+										<a href="https://github.com/AnthonySNE/Bike-Sales-in-Excel
 
 										" class="image fit"><img src="images/MomentumSaleBanner.jpg" alt="" /></a>
 										<p>Using sample data sets to evaluate and create visuals in excel.</p>
 										<ul class="actions special">
-											<li><a href="https://onedrive.live.com/edit.aspx?resid=6D4FC44CD6D7D8E9!66165&ithint=file%2cxlsx&ct=1676604607493&wdOrigin=OFFICECOM-WEB.START.EDGEWORTH
+											<li><a href="https://github.com/AnthonySNE/Bike-Sales-in-Excel
 
 												" class="button">View Project</a></li>
 										</ul>
